bump Java naar 21 LTS (Temurin) + Jaxb & Xstream, OptaPlanner naar 8.44, Guice naar 7, ConstraintProvider ipv Drools regels