@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyMMddHHmm</maven.build.timestamp.format>
         <javafx.version>11</javafx.version>
-        <java.version>21</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -246,14 +246,17 @@
                             </classPath>
                             <icon>src/main/resources/icon.ico</icon>
                             <jre>
-                                <path>./jdk-21.0.7+6-jre</path>
-                                <!--<path>./java</path>-->
+                                <path>./java</path>
                                 <!--<bundledJreAsFallback>true</bundledJreAsFallback>-->
                                 <minVersion>${java.version}</minVersion>
                                 <jdkPreference>jdkOnly</jdkPreference>
                                 <!--<jdkPreference>preferJre</jdkPreference>-->
                                 <initialHeapSize>512</initialHeapSize>
                                 <maxHeapSize>4096</maxHeapSize>
+                                <opts>
+                                <opt>--module-path=lib</opt>
+                                <opt>--add-modules=javafx.controls,javafx.fxml</opt>
+                                </opts>
                             </jre>
 
                             <versionInfo>
